--- a/main_ws/environment.yml
+++ b/main_ws/environment.yml
@@ -5,6 +5,7 @@ channels:
 dependencies:
   - _libgcc_mutex=0.1=main
   - _tflow_select=2.1.0=gpu
+  - astor=0.8.0=py27_0
   - backports=1.0=py_2
   - backports.weakref=1.0.post1=py_1
   - blas=1.0=mkl
@@ -15,9 +16,11 @@ dependencies:
   - cudnn=7.6.0=cuda10.1_0
   - cupti=10.1.168=0
   - dbus=1.13.6=h746ee38_0
+  - enum34=1.1.6=py27_1
   - expat=2.2.6=he6710b0_0
   - fontconfig=2.13.0=h9420a91_0
   - freetype=2.9.1=h8a8886c_1
+  - funcsigs=1.0.2=py27_0
   - future=0.17.1=py27_0
   - futures=3.3.0=py27_0
   - glib=2.56.2=hd408876_0
@@ -48,7 +51,6 @@ dependencies:
   - mkl_random=1.1.0=py27hd6b4f25_0
   - mock=3.0.5=py27_0
   - ncurses=6.1=he6710b0_1
-  - numpy-base=1.16.4=py27hde5b4d6_0
   - openssl=1.1.1=h7b6447c_0
   - pcre=8.43=he6710b0_0
   - pip=19.2.3=py27_0
@@ -58,10 +60,11 @@ dependencies:
   - readline=7.0=h7b6447c_5
   - setuptools=41.4.0=py27_0
   - sip=4.19.8=py27hf484d3e_0
+  - six=1.12.0=py27_0
   - sqlite=3.30.0=h7b6447c_0
   - tensorflow=1.14.0=gpu_py27h39f1c70_0
   - tensorflow-base=1.14.0=gpu_py27he45bfe2_0
-  - tensorflow-gpu=1.14.0=h0d30ee6_0
+  - termcolor=1.1.0=py27_1
   - tk=8.6.8=hbc83047_0
   - traceback2=1.4.0=py27_0
   - unittest2=1.1.0=py27_0
@@ -73,7 +76,6 @@ dependencies:
   - pip:
     - absl-py==0.8.1
     - asn1crypto==1.1.0
-    - astor==0.8.0
     - attrs==19.2.0
     - autobahn==19.10.1
     - automat==0.7.0
@@ -86,8 +88,6 @@ dependencies:
     - cryptography==2.7
     - docutils==0.15.2
     - enum==0.4.7
-    - enum34==1.1.6
-    - funcsigs==1.0.2
     - functools32==3.2.3.post2
     - gast==0.2.2
     - grpcio==1.24.1
@@ -98,12 +98,13 @@ dependencies:
     - ipaddress==1.0.22
     - keras==2.3.1
     - numpy==1.16.5
-    - opencv-python==4.1.1.26
+    - opencv-python==3.4.3.18
     - opt-einsum==2.3.2
     - pillow==6.2.0
     - protobuf==3.10.0
     - pycparser==2.19
     - pydot==1.4.1
+    - pygame==1.9.6
     - pyhamcrest==1.9.0
     - pymongo==3.9.0
     - pyparsing==2.4.2
@@ -114,10 +115,9 @@ dependencies:
     - scipy==1.2.2
     - shiboken2==5.13.1
     - singledispatch==3.4.0.3
-    - six==1.12.0
     - tensorboard==2.0.0
     - tensorflow-estimator==2.0.0
-    - termcolor==1.1.0
+    - tensorflow-gpu==2.0.0
     - tornado==5.1.1
     - twisted==19.7.0
     - txaio==18.8.1
