--- a/main_ws/environment.yml
+++ b/main_ws/environment.yml
@@ -1,125 +1,56 @@
 name: cds
 channels:
-  - anaconda
   - defaults
 dependencies:
   - _libgcc_mutex=0.1=main
-  - _tflow_select=2.1.0=gpu
-  - astor=0.8.0=py27_0
-  - backports=1.0=py_2
-  - backports.weakref=1.0.post1=py_1
-  - blas=1.0=mkl
-  - c-ares=1.15.0=h7b6447c_1001
-  - ca-certificates=2019.8.28=0
+  - ca-certificates=2019.10.16=0
   - certifi=2019.9.11=py27_0
-  - cudatoolkit=10.1.168=0
-  - cudnn=7.6.0=cuda10.1_0
-  - cupti=10.1.168=0
-  - dbus=1.13.6=h746ee38_0
-  - enum34=1.1.6=py27_1
-  - expat=2.2.6=he6710b0_0
-  - fontconfig=2.13.0=h9420a91_0
-  - freetype=2.9.1=h8a8886c_1
-  - funcsigs=1.0.2=py27_0
-  - future=0.17.1=py27_0
-  - futures=3.3.0=py27_0
-  - glib=2.56.2=hd408876_0
-  - google-pasta=0.1.7=py_0
-  - gst-plugins-base=1.14.0=hbbd80ab_1
-  - gstreamer=1.14.0=hb453b48_1
-  - hdf5=1.10.4=hb1b8bf9_0
-  - icu=58.2=h9c2bf20_1
-  - intel-openmp=2019.5=281
-  - jpeg=9b=h024ee3a_2
-  - keras-applications=1.0.8=py_0
-  - keras-preprocessing=1.1.0=py_1
   - libedit=3.1.20181209=hc058e9b_0
   - libffi=3.2.1=hd88cf55_4
   - libgcc-ng=9.1.0=hdf63c60_0
-  - libgfortran-ng=7.3.0=hdf63c60_0
-  - libpng=1.6.37=hbc83047_0
-  - libprotobuf=3.9.2=hd408876_0
   - libstdcxx-ng=9.1.0=hdf63c60_0
-  - libuuid=1.0.3=h1bed415_2
-  - libxcb=1.13=h1bed415_1
-  - libxml2=2.9.9=hea5a465_1
-  - linecache2=1.0.0=py27_0
-  - markdown=3.1.1=py27_0
-  - mkl=2019.5=281
-  - mkl-service=2.3.0=py27he904b0f_0
-  - mkl_fft=1.0.14=py27ha843d7b_0
-  - mkl_random=1.1.0=py27hd6b4f25_0
-  - mock=3.0.5=py27_0
   - ncurses=6.1=he6710b0_1
-  - openssl=1.1.1=h7b6447c_0
-  - pcre=8.43=he6710b0_0
-  - pip=19.2.3=py27_0
-  - pyqt=5.9.2=py27h05f1152_2
-  - python=2.7.16=h9bab390_7
-  - qt=5.9.7=h5867ecd_1
+  - openssl=1.1.1d=h7b6447c_3
+  - pip=19.3.1=py27_0
+  - python=2.7.17=h9bab390_0
   - readline=7.0=h7b6447c_5
   - setuptools=41.4.0=py27_0
-  - sip=4.19.8=py27hf484d3e_0
-  - six=1.12.0=py27_0
   - sqlite=3.30.0=h7b6447c_0
-  - tensorflow=1.14.0=gpu_py27h39f1c70_0
-  - tensorflow-base=1.14.0=gpu_py27he45bfe2_0
-  - termcolor=1.1.0=py27_1
   - tk=8.6.8=hbc83047_0
-  - traceback2=1.4.0=py27_0
-  - unittest2=1.1.0=py27_0
-  - werkzeug=0.16.0=py_0
   - wheel=0.33.6=py27_0
-  - wrapt=1.11.2=py27h7b6447c_0
-  - xz=5.2.4=h14c3975_4
   - zlib=1.2.11=h7b6447c_3
   - pip:
     - absl-py==0.8.1
-    - asn1crypto==1.1.0
-    - attrs==19.2.0
-    - autobahn==19.10.1
-    - automat==0.7.0
-    - backports-abc==0.5
+    - astor==0.8.0
     - backports-weakref==1.0.post1
-    - bson==0.5.8
-    - catkin-pkg==0.4.13
-    - cffi==1.12.3
-    - constantly==15.1.0
-    - cryptography==2.7
+    - catkin-pkg==0.4.14
     - docutils==0.15.2
-    - enum==0.4.7
+    - enum34==1.1.6
+    - funcsigs==1.0.2
     - functools32==3.2.3.post2
+    - futures==3.3.0
     - gast==0.2.2
+    - google-pasta==0.1.7
     - grpcio==1.24.1
     - h5py==2.10.0
-    - hyperlink==19.0.0
-    - idna==2.8
-    - incremental==17.5.0
-    - ipaddress==1.0.22
-    - keras==2.3.1
+    - keras-applications==1.0.8
+    - keras-preprocessing==1.1.0
+    - markdown==3.1.1
+    - mock==3.0.5
     - numpy==1.16.5
     - opencv-python==3.4.3.18
     - opt-einsum==2.3.2
-    - pillow==6.2.0
     - protobuf==3.10.0
-    - pycparser==2.19
-    - pydot==1.4.1
-    - pygame==1.9.6
-    - pyhamcrest==1.9.0
-    - pymongo==3.9.0
     - pyparsing==2.4.2
-    - pyside2==5.13.1
     - python-dateutil==2.8.0
     - pyyaml==5.1.2
     - rospkg==1.1.10
-    - scipy==1.2.2
-    - shiboken2==5.13.1
-    - singledispatch==3.4.0.3
+    - six==1.12.0
     - tensorboard==2.0.0
-    - tensorflow-estimator==2.0.0
+    - tensorflow-estimator==2.0.1
     - tensorflow-gpu==2.0.0
-    - tornado==5.1.1
-    - twisted==19.7.0
-    - txaio==18.8.1
-    - zope-interface==4.6.0
+    - termcolor==1.1.0
+    - werkzeug==0.16.0
+    - wrapt==1.11.2
+prefix: /home/ironman/miniconda3/envs/cds
 
